--- a/projects.html
+++ b/projects.html
@@ -1,66 +1,66 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Belal M. K. Said</title>
-<link rel="stylesheet" type="text/css" href="core.css" media="screen" />
- <script src="jquery.js"></script>
- <script src="core.js"></script>
+  <title>Belal M. K. Said</title>
+  <link rel="stylesheet" type="text/css" href="core.css" media="screen" />
+  <script src="jquery.js"></script>
+  <script src="core.js"></script>
 </head>
 <body>
-<ul id="barmenu">
-  <li><a href="index.html">Home</a></li>
-  <li><a class="active" href="projects.html">Projects</a></li>
-  <li><a href="BelalSaidResume.pdf" target="_blank">Resume</a></li>
-</ul>
-<div id="truebody">
- <div id="pcontainer">
- <h2><a href="gameoflife/gof.html" target="_blank">Game Of Life: Predator/Prey</a></h2>
-  <br/>
-  <div id="projectdisplay">
-  <img src="projects/gofimg1.png"></img>
-  <img src="projects/gofimg2.png"></img>
-  <img src="projects/gof/leaningtower3.PNG"></img>
+  <ul id="barmenu">
+    <li><a href="index.html">Home</a></li>
+    <li><a class="active" href="projects.html">Projects</a></li>
+    <li><a href="BelalSaidResume.pdf" target="_blank">Resume</a></li>
+  </ul>
+  <div id="truebody">
+   <div id="pcontainer">
+     <h2><a href="gameoflife/gof.html" target="_blank">Game Of Life: Predator/Prey</a>  <a href="https://github.com/belalmksaid/GameofLife" target="_blank"><img id="srcicon" src="github.png"/></a></h2>
+     <br/>
+     <div id="projectdisplay">
+      <img src="projects/gofimg1.png"></img>
+      <img src="projects/gofimg2.png"></img>
+      <img src="projects/gof/leaningtower3.PNG"></img>
+    </div>
+    <br/>
+    <h3>This is a simple AI project with hunter particles attempting to eat food particles (the bigger particles) and food particles escaping. The AI controls the speed and orientation of the predator particles but excessive speed comes with the price of reduced fitness from wasted energy. The food particles posses a few more neutons making them slightly smarter than predator particles. The AI is optimized using a simple genetic algorithm in which unfit hunters and food particles are discarded and replaced with the children of fit ones. The particles start exhibiting interesting behavior around the 10th generation. Food particles start exhibiting group behavior around the 25th generation. As a defence mechanism, they form a "leaning tower" (seen in picture 3) that keeps predator particles suspended as they can only see the closest food particle.
+    </h3>
+    <br/>
+    <hr/>
+    <h2><a href="SlotCarSim/slotcar.html?t=track4.txt" target="_blank">Dynamics-Matlab Slot Car Simulation</a></h2>
+    <br/>
+    <div id="projectdisplay">
+      <img src="projects/img1.png"></img>
+      <img src="projects/img2.png"></img>
+      <img src="projects/img3.png"></img>
+    </div>
+    <br/>
+    <h3>I built a simulation of a slot car moving in a track. The track path is made by a matlab function using cubic splint and paramtetic spline. The track physics is simulated in javascript for an interactive application.</h3>
+    <br/>
+    <hr/>
+    <h2><a href="scrapmusicbox/scrapmusicbox.html">Scrap Music Box</a></h2>
+    <br/>
+    <div id="projectdisplay">
+      <img src="scrapmusicbox/img1.png"></img>
+      <img src="scrapmusicbox/img2.png"></img>
+      <img src="scrapmusicbox/img3.png"></img>
+    </div>
+    <br/>
+    <h3>I built a music box from scrap wood and rubberbands, inspired by the inventor <a href="https://www.google.com/patents/US4458573">Akihiko Isaka's governor</a>. The rubber bands are attached to a governor that controls that speed of the music box using air resistance. The cylinder was built by cutting mahogany using a circular saw and gluing them to form a 3" long cylinder. The notes are built from a rake's teeth that I cut off and filed down to their specific notes.</h3>
+    <br/>
+    <hr/>
+    <h2><a href="https://github.com/belalmksaid/Disque-Raytracer" target="_blank">C# Raytracer</a>  <a href="https://github.com/belalmksaid/Disque-Raytracer" target="_blank"><img id="srcicon" src="github.png"/></a></h2>
+    <br/>
+    <div id="projectdisplay">
+      <img src="raytracer/img1.png"></img>
+      <img src="raytracer/img2.png"></img>
+      <img src="raytracer/img3.png"></img>
+    </div>
+    <br/>
+    <h3>Built a raytracer from scratch based on the book <i>Physically Based Rendering</i> by Matt Pharr. The code was built on abstract classes to allow high customizability and uses a custom built Math library. I started the project to test new raytracing technique such photon mapping and multithreading techniques invloving CPU and GPU.
+    </h3>
+    <br/>
+    <hr/>
   </div>
-  <br/>
-  <h3>This is a simple AI project with hunter particles attempting to eat food particles (the bigger particles) and food particles escaping. The AI controls the speed and orientation of the predator particles but excessive speed comes with the price of reduced fitness from wasted energy. The food particles posses a few more neutons making them slightly smarter than predator particles. The AI is optimized using a simple genetic algorithm in which unfit hunters and food particles are discarded and replaced with the children of fit ones. The particles start exhibiting interesting behavior around the 10th generation. Food particles start exhibiting group behavior around the 25th generation. As a defence mechanism, they form a "leaning tower" (seen in picture 3) that keeps predator particles suspended as they can only see the closest food particle.
-</h3>
-  <br/>
-  <hr/>
-  <h2><a href="SlotCarSim/slotcar.html?t=track4.txt" target="_blank">Dynamics-Matlab Slot Car Simulation</a></h2>
-  <br/>
-  <div id="projectdisplay">
-  <img src="projects/img1.png"></img>
-  <img src="projects/img2.png"></img>
-  <img src="projects/img3.png"></img>
-  </div>
-  <br/>
-  <h3>I built a simulation of a slot car moving in a track. The track path is made by a matlab function using cubic splint and paramtetic spline. The track physics is simulated in javascript for an interactive application.</h3>
-  <br/>
-  <hr/>
-  <h2><a href="scrapmusicbox/scrapmusicbox.html">Scrap Music Box</a></h2>
-  <br/>
-  <div id="projectdisplay">
-  <img src="scrapmusicbox/img1.png"></img>
-  <img src="scrapmusicbox/img2.png"></img>
-  <img src="scrapmusicbox/img3.png"></img>
-  </div>
-  <br/>
-  <h3>I built a music box from scrap wood and rubberbands, inspired by the inventor <a href="https://www.google.com/patents/US4458573">Akihiko Isaka's governor</a>. The rubber bands are attached to a governor that controls that speed of the music box using air resistance. The cylinder was built by cutting mahogany using a circular saw and gluing them to form a 3" long cylinder. The notes are built from a rake's teeth that I cut off and filed down to their specific notes.</h3>
-  <br/>
-  <hr/>
-  <h2><a href="https://github.com/belalmksaid/Disque-Raytracer" target="_blank">C# Raytracer</a></h2>
-  <br/>
-  <div id="projectdisplay">
-  <img src="raytracer/img1.png"></img>
-  <img src="raytracer/img2.png"></img>
-  <img src="raytracer/img3.png"></img>
-  </div>
-  <br/>
-  <h3>Built a raytracer from scratch based on the book <i>Physically Based Rendering</i> by Matt Pharr. The code was built on abstract classes to allow high customizability and uses a custom built Math library. I started the project to test new raytracing technique such photon mapping and multithreading techniques invloving CPU and GPU.
-</h3>
-  <br/>
-  <hr/>
-</div>
 </div>
 </body>
 </html>
