--- a/gameoflife/gof.html
+++ b/gameoflife/gof.html
@@ -3,7 +3,7 @@
 	<script type="text/javascript" src="disquemath.js"></script>	
 	<script type="text/javascript" src="neuralnetwork.js"></script>
 	<script type="text/javascript" src="game.js"></script>
-	<script type="text/javascript" src="http://www.chartjs.org/assets/Chart.min.js"></script>
+	<script type="text/javascript" src="Chart.min.js"></script>
 </head>
 <body>
 	<table>
