add pacman experiment

--- a/gameoflife/gof.html
+++ b/gameoflife/gof.html
@@ -13,7 +13,7 @@
 				<div style="height: 600px; width: 200px;">
 
 					<fieldset>
-						<legend>Display Options</legend>
+						<legend>Options</legend>
 						<input type="checkbox" id="showgraph"/>Show Fitness Graph<br />
 						<input type="checkbox" id="border" />Hard Borders<br />
 						<input type="checkbox" id="freeze" />Freeze<br />
