--- a/PacmanAI/experiment.html
+++ b/PacmanAI/experiment.html
@@ -2,6 +2,15 @@
 	<head>
 		<script type="text/javascript" src="gamecode/pacmanMOD.js"></script>
 		<script type="text/javascript" src="gamecode/modernizr-1.5.min.js"></script>
+		<script type="text/javascript" src="neuralnetwork.js"></script>
+		<script type="text/javascript">
+			var pacBrain = new NeuralNetwork();
+			pacBrain.numInputs = 13;
+			pacBrain.numOutputs = 1;
+			pacBrain.create();
+			var pacGene = new gene(pacBrain.getWeights(), 0);
+			
+		</script>
 		<style type="text/css">
 			html *
 			{
@@ -18,9 +27,36 @@
 		</style>
 	</head>
 	<body>
-		<div id="pace"></div>
+		<div id="pace" style="width:342px;"></div>
 		<script type="text/javascript">
 			PACMAN.init(document.getElementById("pace"), "./gamecode");
+			setInterval(function() {
+				if(STAT == 7 && MOD) {
+					var temp = new Array();
+					for(var i = 0; i < LOC.length; i++) {
+						temp.push(LOC[i]);
+					}
+					temp.push(U);
+					temp.push(D);
+					temp.push(L);
+					temp.push(R);
+					temp.push(ISV);
+					var o = pacBrain.update(temp)[0];
+					if(o < 0.25) {
+						PACMAN.keyDown({"keyCode" : KEY.ARROW_DOWN, "preventDefault": function() {}, "stopPropagation" : function() {}});
+					}
+					else if(o < 0.5) {
+						PACMAN.keyDown({"keyCode" : KEY.ARROW_UP, "preventDefault": function() {}, "stopPropagation" : function() {}});
+					}
+					else if(o < 0.75) {
+						PACMAN.keyDown({"keyCode" : KEY.ARROW_LEFT, "preventDefault": function() {}, "stopPropagation" : function() {}});
+					}
+					else {
+						PACMAN.keyDown({"keyCode" : KEY.ARROW_RIGHT, "preventDefault": function() {}, "stopPropagation" : function() {}});
+					}
+					//console.log(o[0]);
+				}
+			}, 1);
 		</script>
 	</body>
 </html>
