--- a/PacmanAI/experiment.html
+++ b/PacmanAI/experiment.html
@@ -9,7 +9,7 @@
 			pacBrain.numOutputs = 1;
 			pacBrain.create();
 			var pacGene = new gene(pacBrain.getWeights(), 0);
-			
+
 		</script>
 		<style type="text/css">
 			html *
@@ -54,6 +54,7 @@
 					else {
 						PACMAN.keyDown({"keyCode" : KEY.ARROW_RIGHT, "preventDefault": function() {}, "stopPropagation" : function() {}});
 					}
+					pacGene.fitness = FITNESS;
 					//console.log(o[0]);
 				}
 			}, 1);
