--- a/PacmanAI/labratory.html
+++ b/PacmanAI/labratory.html
@@ -5,17 +5,54 @@
 			{
 				font-family: "Courier";
 			}
+			#controlPanel > table 
+			{
+				border: none;
+				width: 100%;
+			}
+
+			#controlPanel td {
+				width: 50%;
+			}
 		</style>
+		<script type="text/javascript" src="neuralnetwork.js"></script>
 	</head>
 	<body>
 	<h1 style="text-align: center;">AI LAB</h1>
 	<br/>
-	<div id="controls" style="height: 100px;"></div>
+	<div id="controlPanel">
+	<table>
+		<tr >
+			<td><p id="gen">Generation: 0</p>
+		</td>
+			<td><p id="evo">Time Until Next Evolution:</p></td>
+		</tr>
+		<tr>
+			<th colspan="2" style="text-align: left;">
+				<button onclick="getgene()">Get Best Genome</button>
+				<br/>
+				<textarea style="width: 100%; height: 100px; resize: none" id="genetext"></textarea>
+			</th>
+		</tr>
+	</table>
+	</div>
 	<br/>
 	<div id="container" style="text-align: center;">
 	</div>
 	<script type="text/javascript">
-		var n = 16;
+		function getParameterByName(name, url) {
+    		if (!url) {
+     			url = window.location.href;
+    		}
+    		name = name.replace(/[\[\]]/g, "\\$&");
+    		var regex = new RegExp("[?&]" + name + "(=([^&#]*)|&|#|$)"),
+       		results = regex.exec(url);
+    		if (!results) return null;
+    		if (!results[2]) return '';
+    		return decodeURIComponent(results[2].replace(/\+/g, " "));
+		}
+		var n = parseInt(getParameterByName("n"));
+		var cint = parseInt(getParameterByName("t")) * 60;
 		for(var i = 0; i < n; i++) {
 			container.innerHTML += "<iframe src='experiment.html' id='pace" + i + "' style='height:426px; width:342px; display: inline-block; margin: 2px'></iframe>";
 		}
@@ -24,6 +61,34 @@
 		for(var  i = 0; i < n; i++) {
 			var gene = document.getElementById("pace" + i).pacGene;
 			genePool.genes.push(gene);
+		}
+
+		var bstindex = 0;
+		var bst = 0;
+		var avg = 0;
+		setInterval(function() {
+			gen.innerHTML = "Generation: " + genePool.generation;
+			if(cint <= 0) {
+				cint = 1000;
+			}
+			evo.innerHTML = "Time Until Next Evolution: " + Math.floor(cint * (1/60)) + " s";
+			cint--;
+			for(var i = 0; i < genePool.genes.length; i++) {
+				avg += genePool.genes[i].fitness;
+				if(genePool.genes[i].fitness > bst) {
+					bst = genePool.genes[i].fitness;
+					bstindex = i
+				}
+			}
+			avg /= genePool.genes.length;
+
+		}, 1000/60);
+		function getgene() {
+			var txt = "";
+			for(var i = 0; i < genePool.genes[bstindex].weights.length; i++) {
+				txt += genePool.genes[bstindex].weights[i] + "|";
+			}
+			genetext.innerHTML = txt;
 		}
 	</script>
 	</body>
