--- a/PacmanAI/labratory.html
+++ b/PacmanAI/labratory.html
@@ -92,6 +92,11 @@
 			setInterval(function() {
 			gen.innerHTML = "Generation: " + genePool.generation;
 			if(cint <= 0) {
+				genePool.epoch(0.5);
+				for(var i = 0; i < genePool.genes.length; i++) {
+					document.getElementById("pace" + i).contentWindow.pacGene = genePool.genes[i];
+					document.getElementById("pace" + i).contentWindow.pacBrain.putWeights(genePool.genes[i].weights);
+				}
 				cint = 1000;
 			}
 			evo.innerHTML = "Time Until Next Evolution: " + Math.floor(cint * (1/60)) + " s";
@@ -111,7 +116,7 @@
 		
 
 		var bstindex = 0;
-		var bst = 0;
+		var bst = -10000000;
 		var avg = 0;
 		
 		function getgene() {
