--- a/PacmanAI/labratory.html
+++ b/PacmanAI/labratory.html
@@ -76,7 +76,8 @@
     		return decodeURIComponent(results[2].replace(/\+/g, " "));
 		}
 		var n = parseInt(getParameterByName("n"));
-		var cint = parseInt(getParameterByName("t")) * 60;
+		var c = parseInt(getParameterByName("t")) * 60;
+		var cint = c;
 		for(var i = 0; i < n; i++) {
 			container.innerHTML += "<iframe src='experiment.html' id='pace" + i + "' style='height:426px; width:342px; display: inline-block; margin: 2px'></iframe>";
 		}
@@ -97,7 +98,7 @@
 					document.getElementById("pace" + i).contentWindow.pacGene = genePool.genes[i];
 					document.getElementById("pace" + i).contentWindow.pacBrain.putWeights(genePool.genes[i].weights);
 				}
-				cint = 1000;
+				cint = c;
 			}
 			evo.innerHTML = "Time Until Next Evolution: " + Math.floor(cint * (1/60)) + " s";
 			cint--;
