--- a/PacmanAI/labratory.html
+++ b/PacmanAI/labratory.html
@@ -30,7 +30,7 @@
 		</tr>
 		<tr>
 			<th colspan="2">
-				<canvas id="graph" height="300px" style="width: 100%"></canvas>
+				<canvas id="graph" height="300px" width="800px"></canvas>
 			</th>
 		</tr>
 		<tr>
