--- a/PacmanAI/labratory.html
+++ b/PacmanAI/labratory.html
@@ -121,6 +121,12 @@
 
 		}, 1000/60);
 	}, 3000);
+		
+
+		bstindex = 0;
+		bst = -10000000;
+		avg = 0;
+		
 		function getgene() {
 			var txt = "";
 			for(var i = 0; i < genePool.genes[bstindex].weights.length; i++) {
