update AI version

--- a/PacmanAI/experiment.html
+++ b/PacmanAI/experiment.html
@@ -2,7 +2,7 @@
 	<head>
 		<script type="text/javascript" src="gamecode/pacmanMOD.js"></script>
 		<script type="text/javascript" src="gamecode/modernizr-1.5.min.js"></script>
-		<script type="text/javascript" src="neuralnetwork.js"></script>
+		<script type="text/javascript" src="neuralnetwork2.js"></script>
 		<script type="text/javascript">
 			var pacBrain = new NeuralNetwork();
 			pacBrain.numInputs = 13;
