--- a/PacmanAI/labratory.html
+++ b/PacmanAI/labratory.html
@@ -15,7 +15,7 @@
 				width: 50%;
 			}
 		</style>
-		<script type="text/javascript" src="neuralnetwork.js"></script>
+		<script type="text/javascript" src="neuralnetwork2.js"></script>
 			<script type="text/javascript" src="Chart.min.js"></script>
 	</head>
 	<body>
