--- a/projects.html
+++ b/projects.html
@@ -14,6 +14,16 @@
   </ul>
   <div id="truebody">
    <div id="pcontainer">
+   <h2><a href="PacmanAI/labratory.html?n=32&t=20" target="_blank">Pacman AI Labratory</a>  <a href="https://github.com/belalmksaid/PacmanAILab" target="_blank"><img id="srcicon" src="github.png"/></a></h2>
+     <br/>
+     <div id="projectdisplay">
+      
+    </div>
+    <br/>
+    <h3>Watch as an AI learns how to play Pacman. It takes over 30 generations before any interesting behavior arises.
+    </h3>
+    <br/>
+    <hr/>
      <h2><a href="gameoflife/gof.html" target="_blank">Game Of Life: Predator/Prey</a>  <a href="https://github.com/belalmksaid/GameofLife" target="_blank"><img id="srcicon" src="github.png"/></a></h2>
      <br/>
      <div id="projectdisplay">
