--- a/projects.html
+++ b/projects.html
@@ -17,7 +17,9 @@
    <h2><a href="PacmanAI/labratory.html?n=32&t=20" target="_blank">Pacman AI Labratory</a>  <a href="https://github.com/belalmksaid/PacmanAILab" target="_blank"><img id="srcicon" src="github.png"/></a></h2>
      <br/>
      <div id="projectdisplay">
-      
+      <img src="projects/pacman/p1.PNG"></img>
+      <img src="projects/pacman/p2.PNG"></img>
+      <img src="projects/pacman/p3.PNG"></img>
     </div>
     <br/>
     <h3>Watch as an AI learns how to play Pacman. It takes over 30 generations before any interesting behavior arises.
