--- a/PacBotLab/labratory.html
+++ b/PacBotLab/labratory.html
@@ -168,7 +168,7 @@
 				canv.attr("width", PACBOT.CONSTANTS.Width);
 				canv.attr("height", PACBOT.CONSTANTS.Height);
 				$(tube).append(canv);
-				experiments.push(new PacBotGame(canv[0].getContext('2d'), v(0, 0), new NeuralNetwork(15, 2, conditions.layers, conditions.npr), PACBOT.MainMap));
+				experiments.push(new PacBotGame(canv[0].getContext('2d'), v(0, 0), new NeuralNetwork(16 + 4, 2 + 4, conditions.layers, conditions.npr), PACBOT.MainMap));
 				experiments[experiments.length - 1].brain.create();
 				genePool.genes.push(new gene(experiments[experiments.length - 1].brain.getWeights(), 0));
 			}
