--- a/PacBotLab/labratory.html
+++ b/PacBotLab/labratory.html
@@ -60,10 +60,11 @@
 			<p text="Elitism: " unit="">Elitism: 0.5</p>
 			<input type="range" value="0.5" min="0.1" max="0.9" step="0.1" style="width: 100%" bind="erate"/>
 		</td>
+		<!--
 		<td type="dynamic"><p text="Initial Generation Time: " unit="s">Initial Generation Time: 20 s</p>
 			<input type="range" value="20" min="10" max="1000" step="1" style="width: 100%" bind="initTime"/></td>
 			<td type="dynamic"><p text="Target Generation Time: " unit="s">Target Generation Time: 20 s</p>
-				<input type="range" value="20" min="10" max="1000" step="1" style="width: 100%" bind="targTime"/></td>
+				<input type="range" value="20" min="10" max="1000" step="1" style="width: 100%" bind="targTime"/></td>-->
 
 				<td type="dynamic">
 					<p text="Size of Gene Pool: " unit="">Size of Gene Pool: 20</p>
@@ -103,10 +104,9 @@
 						<legend>Status:</legend>
 						<table style="width: 100%">
 							<tr>
-								<td><p text="Generation: 0">Generation: 0</p></td>
+								<td><p text="Generation: 0" id="gener">Generation: 0</p></td>
 								<td><p text="Average Fitness: ">Average Fitness: 0</p></td>
 								<td><p text="Best Fitness: ">Best Fitness: 0</p></td>
-								<td><p text="Next Generation: ">Next Generation in: 0 s</p></td>
 							</tr>
 						</table>
 					</fieldset>
@@ -128,6 +128,7 @@
 		var experiments = new Array();
 		var threads = new Array();
 		var genePool = new GenePool();
+		var dead = 0;
 		C = null;
 		//initialize
 		$(tube).css({
@@ -173,7 +174,7 @@
 				genePool.genes.push(new gene(experiments[experiments.length - 1].brain.getWeights(), 0));
 			}
 			for(var i = 0; i < conditions.poolSize; i++) {
-				eval("threads[" + i + "] = setInterval(function() { experiments[" + i + "].update();}, PACBOT.CONSTANTS.FrameRate);");
+				eval("threads[" + i + "] = setInterval(function() { experiments[" + i + "].update(); if(experiments[" + i + "].lives == 0) {dead++; cleanUp();}}, PACBOT.CONSTANTS.FrameRate);");
 			}
 		});
 		$(stateButton).on("click", function() {
@@ -185,6 +186,7 @@
 				status = 1;
 				$(stateButton).text("Pause");
 			}
+			statusI(status);
 		});
 		$(epochStatusButton).on("click", function() {
 			if(epochStatus == 1) {
@@ -196,6 +198,29 @@
 				$(epochStatusButton).text("Stop Evolving");
 			}
 		});
+		function statusI(s) {
+			this.status = s;
+			for(var i = 0; i < experiments.length; i++) {
+				experiments[i].state = s;
+			}
+		}
+		function cleanUp() {
+			console.log("Clean up started.");
+			statusI(0);
+			for(var i = 0; i < experiments.length; i++) {
+				genePool.genes[i].fitness = experiments[i].fitness;
+			}
+			genePool.epoch();
+			for(var i = 0; i < experiments.length; i++) {
+				experiments[i].brain.putWeights(genePool.genes[i].weights);
+				experiments[i].fitness = 0;
+				experiments[i].resetAll();
+			}
+			dead = 0;
+			statusI(1);
+			console.log("Clean up ended.");
+			gene.innerHTML = gener.getAttribute("text") + genePool.generation;
+		}
 		/*$(window).resize(function() {
 			var nh = Math.floor($(tube).width() / PACBOT.CONSTANTS.Width);
 			var nv = Math.ceil(conditions.poolSize / nh);
